# Copyright (c) 2018 Lydia Simmons
# This software is licensed under the GNU General Public License v3.0.
# See the LICENSE file in this distribution for license terms.

[package]
name = "gabc-parser"
version = "0.1.0"
authors = ["Lydia Simmons"]

[dependencies]
pest = "1.0.6"
pest_derive = "1.0.6"
itertools = "0.7.8"
serde = "1.0.70"
serde_derive = "1.0"
serde_json = "1.0"
