# Copyright (c) 2018 Lydia Simmons
# This software is licensed under the GNU General Public License v3.0.
# See the LICENSE file in this distribution for license terms.

[package]
name = "gabc-parser"
version = "0.1.1"
authors = ["Lydia Simmons"]
description = "A library for parsing, manipulating, and converting gabc files"
repository = "https://github.com/saybaar/gabc-parser"
readme = "./README.md"
keywords = ["gabc", "lilypond", "gregorio"]
categories = ["command-line-utilities", "parser-implementations"]
license = "GPL-3.0-or-later"

[dependencies]
pest = "1.0.6"
pest_derive = "1.0.6"
itertools = "0.7.8"
serde = "1.0.70"
serde_derive = "1.0"
serde_json = "1.0"
